--- a/index.html
+++ b/index.html
@@ -651,8 +651,9 @@
             
             <h4>その他のルール</h4>
             <ul>
-                <li>途中離脱可能（参加時点でポイント付与対象）</li>
+                <li>途中離脱可能（ただしペナルティあり）</li>
                 <li>死因ポイントは累積され、最終集計で罰ゲーム対象者が決定</li>
+                <li>離脱時のペナルティポイントも加算される</li>
             </ul>
         </section>
 
