--- a/penalty-roulette.html
+++ b/penalty-roulette.html
@@ -217,6 +217,7 @@
     </style>
 </head>
 <body>
+    <script src="js/auth-check.js"></script>
     <div class="container">
         <h1>⚠️ 途中離脱ペナルティルーレット ⚠️</h1>
         
