--- a/penalty.html
+++ b/penalty.html
@@ -356,6 +356,7 @@
     </style>
 </head>
 <body>
+    <script src="js/auth-check.js"></script>
     <div class="container">
         <div class="reveal-section">
             <h1>⚠️ 罰ゲーム発表 ⚠️</h1>
