--- a/point-calculator.html
+++ b/point-calculator.html
@@ -150,16 +150,7 @@
     </style>
 </head>
 <body>
-    <script>
-        // 認証チェック
-        const isAuthenticated = sessionStorage.getItem('adminAuthenticated');
-        const authTime = sessionStorage.getItem('authTime');
-        
-        // 認証がない、または1時間以上経過している場合はリダイレクト
-        if (!isAuthenticated || !authTime || (Date.now() - parseInt(authTime) > 3600000)) {
-            window.location.href = 'admin-login.html';
-        }
-    </script>
+    <script src="js/auth-check.js"></script>
     
     <div class="container">
         <h1>💀 死因ポイント計算 💀</h1>
