--- a/penalty-roulette.html
+++ b/penalty-roulette.html
@@ -270,13 +270,14 @@
         
         const penalties = [
             { text: "+0pt", points: 0, color: "#44ff44", description: "セーフ！ペナルティなし" },
-            { text: "+20pt", points: 20, color: "#ffff44", description: "軽いペナルティ: 20ポイント加算" },
-            { text: "+30pt", points: 30, color: "#ffaa44", description: "中程度のペナルティ: 30ポイント加算" },
-            { text: "+50pt", points: 50, color: "#ff6644", description: "重いペナルティ: 50ポイント加算" },
-            { text: "+100pt", points: 100, color: "#ff0000", description: "最大ペナルティ！100ポイント加算" },
-            { text: "+10pt", points: 10, color: "#88ff88", description: "最小ペナルティ: 10ポイント加算" },
-            { text: "+40pt", points: 40, color: "#ff8844", description: "中程度のペナルティ: 40ポイント加算" },
-            { text: "+75pt", points: 75, color: "#ff4444", description: "かなり重いペナルティ: 75ポイント加算" }
+            { text: "+0pt", points: 0, color: "#66ff66", description: "セーフ！ペナルティなし" },
+            { text: "+0pt", points: 0, color: "#55ff55", description: "セーフ！ペナルティなし" },
+            { text: "+5pt", points: 5, color: "#88ff88", description: "最小ペナルティ: 5ポイント加算" },
+            { text: "+10pt", points: 10, color: "#ffff44", description: "軽いペナルティ: 10ポイント加算" },
+            { text: "+15pt", points: 15, color: "#ffaa44", description: "中程度のペナルティ: 15ポイント加算" },
+            { text: "+20pt", points: 20, color: "#ff8844", description: "中程度のペナルティ: 20ポイント加算" },
+            { text: "+25pt", points: 25, color: "#ff6644", description: "重いペナルティ: 25ポイント加算" },
+            { text: "+50pt", points: 50, color: "#ff0000", description: "最大ペナルティ！50ポイント加算" }
         ];
         
         let isSpinning = false;
